css/cascada-aborto.css
/*--------Cascada de Proyecto de ley del Aborto-------*/

body{
	margin: 0;
	padding: 0;
}
.container-fluid{
	margin: 0px;
	padding: 0px;
}

ul{
	list-style: none;
	font-family: 'PT Sans', sans-serif !important;
	font-size: 16px;
	font-weight: 400;
	text-align: center;
	text-transform: uppercase;
}
ul li a{
	color: #EC676D !important;
}
ul li a:hover{
	color: #E84248 !important;
	text-decoration: none;
}
ul li:hover{
	border-bottom: 2px solid #E84248;
}


.cont-celeste{
	width: 100%;
	background-color: #DFF0FC;
	
}
.contenido{
	max-width: 960px;
	margin: 0 auto;
}

/*eso es del contenedor de ¿qué es el aborto?*/

.cont-aborto1 p{
	font-size: 18px;
	font-style: normal;
	line-height: 35px;
	font-weight: 400;
	text-align: center;
}

.cont-aborto1 h2{
	color:#4DBCC6;
}
.cont-aborto2 h2{
	color:#E84248;
}
h1{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 60px;
	font-style: bold;
	font-weight: 700;
	color: #ffffff;
	text-align: center;
	display: block;
	padding-top: 180px;
	margin-top:40px;
}

h2{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 40px;
	font-style: bold;
	font-weight: 400;
	text-align: center;
	display: block;
	margin: 70px auto 40px;
}

h3{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 25px;
	font-style: bold;
	font-weight: 700;
	text-align: center;
}

h4{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 20px;
	font-style: bold;
	font-weight: 700;
	text-align: center;
}
p{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 18px;
	font-style: normal;
	line-height: 24px;
	font-weight: 400;
}

/*--imagen del aborto--*/
.img-aborto{
	margin-top: 3px;
	width: 100%;
	height: 550px;
	background: url(../img/imagenembarazogeometricopc-01.png) no-repeat fixed center center;
	background-size: cover;
}

/*--Inicio de elemetos del contenedor de los gráficos--*/
.cont-video{
	padding: 0px;
	margin-bottom: 100px;
}

.cont-grafico{
	margin-bottom: 50px;
}
/*--Fin de elemetos del contenedor de los gráficos--*/

/*--Inicio de la zona del proyecto--*/
.cont-aborto2 h3{
	text-align: left;
	font-weight: 400;
	color: #4CBBC5;
	display: block;
	margin-bottom: 30px;
}

h6{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 17px;
	font-weight: 400;
	text-align: center;
}
h6 span{
	font-weight: 700;
}

.textoproyecto{
	margin-top: 90px;
}
.columnas{
	padding-top: 30px;
	margin-bottom: 45px;
	height: 250px;
}

.circulo-pequeno-rojo{
	width: 74px;
	height: 74px;
	border-radius: 100%;
	background-color: #FDECEC;
	margin: 0 auto;
	font-family: 'PT Sans', sans-serif !important;
	font-size: 40px;
	color: #EC97A2;
	text-align: center;
	padding-top:22px;
	float:left;
}

.leyes-numeros{
	height: 85px;
	margin-bottom: 100px;
}
.leyes-numeros p{
	color:#E84248;
	font-weight: 700;
}
.img-circle{
	width: 100%;
	border-radius: 100%;
	overflow: hidden;
}
/*--fin de la zona del proyecto--*/

/*--inicio footer--*/
footer{
	background-color: #334C49;
	width: 100%;
	padding-top: 20px;
	padding-bottom:30px;
}
.cont-oscuro h4{
	color: #ffffff;
	text-align: center;
}
.contenido1 p{
	color: #4CBAC5;
	font-size: 15px;
	font-weight: 700;
}
.contenido1 a{
	color: #4CBAC5;
	font-size: 13px;
	font-weight: 400;
}
.contenido1 a:hover{
	color: #DFF0FC;
	text-decoration: none;
}

.contenido2 p {
	color: #F1B6B8;
	font-size: 15px;
	font-weight: 700;
}
.contenido2 a{
	color: #F1B6B8;
	font-size: 13px;
	font-weight: 400;
}
.contenido2 a:hover{
	color:#E84248;
	text-decoration: none;
}
/*--fin footer--*/

.cont-celeste{ /*------------arreglo padding--------*/
	width: 100%;
	background-color: #DFF0FC;
}

.contenido{
	max-width: 960px;
	margin: 0 auto;
}

/*-----------------------cascada de melany----------------------*/

.cont-blanco{ 
	width: 100%;
	background-color: #ffffff;

}

.cont-img-cuadrada{
	width: auto;

	overflow: hidden;
}

.cont-img-cuadrada img{
	width: 100%;
}

h3{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 25px;
	font-style: bold;
	font-weight: 700;
	text-align: center;
}

h4{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 20px;
	font-style: bold;
	font-weight: 700;
	text-align: center;
}



.circulo-grande-celeste{
	width: 120px;
	height: 120px;
	border-radius: 100%;
	background-color: #4DBCC6;
	margin: 0 auto;
	font-family: 'PT Sans', sans-serif !important;
	font-size: 100px;
	color: #ffffff;
	text-align: center;
	padding-top: 52px;
}

.circulo-grande-blanco{
	width: 120px;
	height: 120px;
	border-radius: 100%;
	background-color: #ffffff;
	margin: 0 auto;
	font-family: 'PT Sans', sans-serif !important;
	font-size: 100px;
	color: #4DBCC6;
	text-align: center;
	padding-top: 52px;
}

.circulo-grande-rosa{
	width: 120px;
	height: 120px;
	border-radius: 100%;
	background-color: #FDECEC;
	margin: 0 auto;
	font-family: 'PT Sans', sans-serif !important;
	font-size: 100px;
	color: #EC97A2;
	text-align: center;
	padding-top: 52px;
}

.circulo-grande-rojo{
	width: 120px;
	height: 120px;
	border-radius: 100%;
	background-color: #EC97A2;
	margin: 0 auto;
	font-family: 'PT Sans', sans-serif !important;
	font-size: 100px;
	color: #FFFFFF;
	text-align: center;
	padding-top: 52px;
}

.cita br{
	line-height: 1em;
}


h5{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 18px;
	font-style: normal;
	font-weight: 400;
	text-align: right;
	line-height: 1.3em;
}

h5 span{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 20px;
	font-style: bold;
	font-weight: 700;
	text-transform: uppercase;
	line-height: 0.5em;
}

.cita{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 25px !important;
	font-style: italic!important;
	font-weight: 400 !important;
	text-align: right !important;
	line-height: 35px !important;	
	border-left:none !important;
	margin-bottom: none !important;
}

.cita span{
	font-family: 'PT Sans', sans-serif !important;
	font-size: 66px !important;
	font-style: italic !important;
	font-weight: 700 !important;
	text-align: right !important;
	line-height: 30px !important;

}
/* ... */

